# UEFormat

./: .gitignore  .gitmodules  README.md  blender-extension.code-workspace  pyproject.toml  requirements-dev-b4-0.txt
Blender/: pyproject.toml  requirements-dev-b4-0.txt  requirements-dev-b4-1.txt  ue_format.py  unreal_format.py
Blender/io_scene_ueformat/: __init__.py  logging.py  options.py  pyproject.toml  requirements-dev-b4-1.txt  ue_format.py
Blender/io_scene_ueformat/importer/: classes.py  logic.py  utils.py
Blender/io_scene_ueformat/op/: __init__.py  import_helpers.py  panels.py  settings.py
UEFormat/Binaries/Win64/: UnrealEditor-UEFormat.exp
Unreal/UEFormat/: README.md  UEFormat.uplugin
Unreal/UEFormat/Binaries/Win64/: UnrealEditor-UEFormat.exp
Unreal/UEFormat/Source/UEFormat/: UEFormat.Build.cs  UEFormat.uplugin
Unreal/UEFormat/Source/UEFormat/Private/: BPFL.cpp  UEFormat.cpp
Unreal/UEFormat/Source/UEFormat/Public/: BPFL.h  UEFormatSettings.h
Unreal/UEFormat/UEFormat/: UEFormat.Build.cs
Unreal/UEFormat/UEFormat/Private/Readers/: UEFModelReader.cpp
Unreal/UEFormat/UEFormat/Public/: UEFormatSettings.h
core/: CMakeLists.txt
core/api/: CMakeLists.txt
core/api/ueformat/api/: api.h
core/api/ueformat/api/anim/: anim.cpp  anim.h  types.h
core/api/ueformat/api/generic/: convert.h  generic.cpp  result.h  types.h
core/api/ueformat/api/model/: model.cpp  model.h  types.h
core/api/ueformat/api/pose/: pose.cpp  pose.h  types.h
core/lib/: CMakeLists.txt
core/lib/ueformat/anim/: anim.h  types.h
core/lib/ueformat/generic/: archive.cpp  archive.h  compression.cpp  compression.h  container.cpp  container.h  context.cpp  context.h  header.h  save_options.h
core/lib/ueformat/infrastructure/: exception.h  types.h
core/lib/ueformat/pose/: pose.cpp
core/test/: CMakeLists.txt  main.cpp
core/test/api/: bridge_tests.cpp
core/test/harness/: colors.h  harness.cpp  harness.h
core/test/lib/: context_tests.cpp
core/ueformat/anim/: anim.cpp  anim.h  types.h
core/ueformat/general/: archive.h  attribute.h  container.h  context.cpp  context.h  header.h
core/ueformat/generic/: archive.h  attribute.h  container.cpp  context.cpp  context.h  header.h
core/ueformat/infrastructure/: numeric.h  types.h
core/ueformat/model/: model.cpp  model.h  types.h
core/ueformat/pose/: pose.cpp  pose.h  types.h
docs/: generic.md  uanim.md  ueanim.md  uemodel.md  uepose.md
io_scene_ueformat/: options.py
io_scene_ueformat/importer/: classes.py  logic.py
io_scene_ueformat/op/: __init__.py  import_helpers.py  panels.py  settings.py
plugins/blender/: README.md
plugins/blender/io_scene_ueformat/importer/: utils.py
plugins/blender/io_scene_ueformat/op/: settings.py
plugins/unreal/: README.md
(+39 files in other folders)
